kubernetes/operators/rook-ceph/cluster/app/ingress-tailscale.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app rook-ceph-dashboard-tailscale
  namespace: rook-ceph
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    tailscale.com/hostname: rook-ceph
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: rook-ceph-mgr-dashboard
      port:
        number: 8443
